1. Increase the holding time of the cell to set and uncheck the flag in it for mobile devices in order to fix a bug in which, under some circumstances, a cell could open after setting / canceling the flag from the same click on mobile devices; 2. Fix a bug where the background could not cover the entire browser window when changing the screen orientation on mobile devices.

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -22,6 +22,7 @@ html {
   font-weight: 400;
   line-height: 1.15;
   word-wrap: break-word;
+  background-color: #cceecc;
 }
 
 body {
